--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  background: #000;
+}
+
 header, h1 {
   font-family: Bicubik !important;
 }
