fix: решает проблему с неточным скроллом к якорю от navbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
 
+html {
+  scroll-padding-top: 75px;
+}
+
 .theme-black {
   color: $white;
   background-color: $black;
