--- a/src/index.scss
+++ b/src/index.scss
@@ -16,3 +16,30 @@ html {
 .cart-button:focus {
   @extend .bg-white;
 }
+
+@font-face {
+  font-family: Bicubik;
+  src: url('./assets//fonts/Bicubik.OTF')
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+html {
+  background: #000;
+}
+
+header, h1 {
+  font-family: Bicubik !important;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
