--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
-@import '~bootstrap/scss/bootstrap';
+@import 'customBootstrap.scss';
+// @import '~bootstrap/scss/bootstrap.scss';
 
 html {
   scroll-padding-top: 75px;
@@ -17,11 +18,6 @@ html {
   @extend .bg-white;
 }
 
-@font-face {
-  font-family: Bicubik;
-  src: url('./assets//fonts/Bicubik.OTF')
-}
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -32,14 +28,38 @@ body {
 }
 
 html {
-  background: #000;
-}
-
-header, h1 {
-  font-family: Bicubik !important;
+  background: $black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+} 
+
+@font-face {
+  font-family: Bicubik;
+  src: url('../assets/fonts/Bicubik.OTF')
+}
+
+header, h1 {
+  font-family: Bicubik !important;
 }
