--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -5,4 +5,23 @@
 .contact-icon-footer {
   height: 2rem;
   filter: invert(1);
+  animation: pulse 2s infinite;
+  -webkit-animation: pulse 2s infinite;
+  -moz-animation: pulse 2s infinite;
+  -o-animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  30%{
+    transform: scale(0.8);
+  }
+  60%{
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
